--- a/template.tex
+++ b/template.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper, 11pt]{article}
-\usepackage[margin=0.5in]{geometry}
+\documentclass[a4paper, 11pt]{tufte-handout}
+\usepackage[margin=0.7in]{geometry}
 \usepackage{framed}
 \usepackage{graphicx}
 \usepackage{xcolor}
@@ -7,17 +7,20 @@
 \usepackage{xcolor}
 \usepackage{mdframed}
 \usepackage{indentfirst}
+\usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{hyperref}
-\usepackage{txfonts}
+%\usepackage{txfonts}
 \usepackage{amsmath}
 \usepackage{titling}
 \usepackage{titlesec}
 \usepackage[brazil]{babel}
 \definecolor{LightGray}{gray}{0.97}
 \usepackage{minted}
-\usepackage{xcolor} % to access the named colour LightGray
+\usepackage{xcolor}
 
-\setminted[fortran]{  framesep=2mm,
+\setminted[fortran]{
+  framesep=2mm,
   baselinestretch=1.2,
   bgcolor=LightGray,
   fontsize=\footnotesize,
@@ -26,19 +29,23 @@
 \titleformat{\section}{\normalfont\Large\bfseries}{\thesection}{1em}{}[\titlerule] 
 \titleformat{\subsection}{\normalfont\large\bfseries}{\thesubsection}{1em}{} 
 % \renewcommand\thesubsection{\Alph{subsection}}
-\graphicspath{ {./graficos/} }
+\graphicspath{ {../src/graficos/} }
 
+\hypersetup{
+  pdfauthor={Jefter Santiago},
+  pdftitle={Projeto 5 - Simulações de Monte Carlo},
+  pdfcreator={Jefter Santiago}, 
+  pdflang={Portuguese},
+  colorlinks=true,    % Color links instead of boxes
+  linkcolor=blue,     % Color of internal links
+  citecolor=green,    % Color of citation links
+  urlcolor=blue,      % Color of URLs
+}
+
+\title{\color{blue}Projeto 5 - Simulações de Monte Carlo}
+\author{Jefter Santiago (12559016)}
+\date{Entrega: 01/06/2024}
 \begin{document}
-\noindent
-\large\textbf{Autor:} Jefter Santiago \hfill \textbf{Projeto - \#}   \\
-\#USP: 12559016 \\
-\normalsize Curso: Física Estatística Computacional \hfill 2024.1 \\
-Prof. F. C. Alcaraz \hfill Data de entrega: \\
-\noindent\rule{7in}{2.8pt}
-
+\maketitle
 
 \end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: "main.tex"
-%%% End:
