--- a/projeto6/relatorio/tarefa-A.tex
+++ b/projeto6/relatorio/tarefa-A.tex
@@ -1,19 +1,28 @@
 
-
-
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.4\linewidth]{tarefa-A/posicoes-iniciais.png}
     \caption{Posições iniciais das partículas.}
-    \label{eq:tarefa_a_posicoes_iniciais}
+    \label{fig:posicoes-iniciais-a}
 \end{figure}
 
 \begin{figure}[h!]
     \centering 
     \includegraphics[width=0.4\linewidth]{tarefa-A/posicoes-finais.png}
+    \label{fig:posicoes-finais-a}
     \caption{Coordenadas das partículas projetadas à cada $3 \Delta t$.}
 \end{figure}
 
+\begin{figure}[h!]
+    \centering 
+    \includegraphics[width=0.4\linewidth]{tarefa-A/energia.png}
+    \caption{Energia do sistema à cada $3 \Delta t$.}
+    \label{fig:energia_a}
+\end{figure}
 
-
-
+\clearpage
+\subsection*{Código}
+O código abaixo está no diretório \verb|tarefa-a/| e contém 
+as simulações referentes às tarefas A, B e parte da D.
+\input{codigos/tarefa-a.tex}
+\clearpage
