--- a/projeto6/relatorio/main.tex
+++ b/projeto6/relatorio/main.tex
@@ -48,24 +48,26 @@
 \maketitle
 \section{Introdução}
 \input{introducao.tex}
+\clearpage
 \section{Tarefa A}
 \input{tarefa-A.tex}
 \section{Tarefa B}
+\label{sec:sec_b}
 \input{tarefa-B.tex}
 \section{Tarefa C}
+\label{sec:sec_C}
 \input{tarefa-C.tex}
 \section{Tarefa D}
 \input{tarefa-D.tex}
 \section{Tarefa E}
+\label{sec:secE}
 \input{tarefa-E.tex}
 \section{Tarefa F}
 \input{tarefa-F.tex}
 
-\section{Conclusão?} 
 
-
-Por fim, o arquivo \verb|tests.f| é um compilado de todas simulações desenvolvidas nesse projeto 
-e pode ser compilado para rodar todas elas de uma vez. Além disso o script \verb|plots.py| cria todos 
+\emph{PS}: O arquivo \verb|tests.f| é um compilado de todas simulações desenvolvidas nesse projeto 
+e pode ser compilado para rodar todas elas de uma vez e o script \verb|plots.py| cria todos 
 os gráficos e gifs desse trabalho.
 
 
