--- a/projeto6/relatorio/tarefa-D.tex
+++ b/projeto6/relatorio/tarefa-D.tex
@@ -1,4 +1,15 @@
+Uma aplicação direta do resultado do item anterior(\ref{sec:sec_C}) é estimar a temperatura do sistema, 
+que está relacionada ao pico das distribuições (\ref{fig:distribuicoes-velocidade-b}, \ref{fig:distribuicoes-velocidade-c})
+da magnitude.
 
+Pelo teorema da equipartição de energia temos
 \begin{equation}
     K_B T = \langle \frac{m}{2} \left( v_x^2 + v_y^2 \right) \rangle
+    \label{eq:kbt}
 \end{equation}
+
+e foram utilizados os resultados das simulações anteriores para estimar(\ref{eq:kbt}). Os resultados 
+obtidos são $K_B T_B \approx 0.966$ e $K_B T_C \approx 1.018$.\footnote{Era do meu interesse realizar um fitting da curva com esses dados mas não consegui a tempo.}
+
+
+Essa tarefa foi realizada utilizando parte dos códigos das duas tarefas anteriores, (\ref{ssec:codigoA}) e (\ref{ssec:codigoC}). 
